--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1 class="display-5 fw-bold text-body-emphasis">Hello, I'm Zach 👋</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4"><p>A software engineer focused on supply-chain solutions and full-stack web development.</p>
-          <img class = "headshot" src="./images/headshot.jpg" alt = "Picture of Zach Gaffney">
+          <img class = "headshot" src="./headshot.jpg" alt = "Picture of Zach Gaffney">
         </div>
       </div>
 </div>
