--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="d-flex justify-content-center py-3">
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Contact Me</a></li>
+            <li class="nav-item"><a href="./game.html" class="nav-link">Play Game</a></li>
           </ul>
         </header>
       </div>
